--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="app_name">Popular Movies</string>
     <string name="action_settings">Settings</string>
     <string name="title_settings_activity">Settings</string>
@@ -13,8 +14,8 @@
     <string name="movie_image">Movie Image</string>
     <string name="movie_title">Original Movie Title</string>
     <string name="movie_vote_average">Movie Vote Average</string>
+    <string name="movie_release_date">Movie Release Date</string>
+    <string name="title_activity_detail">MovieDetail</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
 
