Updated changes from reviewer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="pref_sort_most_popular">By Most Popular</string>
     <string name="pref_sort_top_rate">By Top Rated</string>
     <string name="pref_sort_order_label">Sort Order:</string>
-    <string name="pref_sort_default" translatable="true">By Most Popular</string>
+    <string name="pref_top_related_default">1</string>
     <string name="pref_key_movies_settings" translatable="false">pref_movies</string>
     <string name="pref_movies_key" translatable="false">movies</string>
     <string name="movie_overview">Movie Overview</string>
@@ -16,6 +16,7 @@
     <string name="movie_vote_average">Movie Vote Average</string>
     <string name="movie_release_date">Movie Release Date</string>
     <string name="title_activity_detail">MovieDetail</string>
+    <string name="trailers_label">Trailers:</string>
 
 </resources>
 
