--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,18 @@
     <string name="action_settings">Settings</string>
     <string name="title_settings_activity">Settings</string>
     <string name="pref_sort_movies_sort_order">Movies Sort Order</string>
-    <string name="pref_sort_most_popular">By Most Popular</string>
-    <string name="pref_sort_top_rate">By Top Rated</string>
-    <string name="pref_sort_favorites">By Favorites</string>
+
+    <string name="pref_sort_most_popular_label">By Most Popular</string>
+    <string name="pref_sort_most_popular" translatable="false">Most Popular</string>
+
+    <string name="pref_sort_top_rate_label">By Top Rated</string>
+    <string name="pref_sort_top_rate" translatable="false">Top Rated</string>
+    <string name="pref_sort_top_rate_default" translatable="false">Top Rated</string>
+
+    <string name="pref_sort_favorites_label">By Favorites</string>
+    <string name="pref_sort_favorites" translatable="false">Favorites</string>
+
     <string name="pref_sort_order_label">Sort Order:</string>
-    <string name="pref_top_related_default">1</string>
     <string name="pref_key_movies_settings" translatable="false">pref_movies</string>
     <string name="pref_movies_key" translatable="false">movies</string>
     <string name="movie_overview">Movie Overview</string>
@@ -18,6 +25,7 @@
     <string name="movie_release_date">Movie Release Date</string>
     <string name="title_activity_detail">Movie Detail</string>
     <string name="trailers_label">Trailers:</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
