--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,11 @@
     <string name="movie_release_date">Movie Release Date</string>
     <string name="title_activity_detail">Movie Detail</string>
     <string name="trailers_label">Trailers:</string>
+    <string name="play_video">Play</string>
+    <string name="player_error">Error initializing YouTube player: %s</string>
+    <string name="seek_to">Jump To</string>
+    <string name="seek_to_hint">Seconds</string>
+    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
