--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="youtube_base_url">https://www.youtube.com/watch?v=</string>
     <string name="trailer_start">http://api.themoviedb.org/3/movie/</string>
     <string name="trailer_end">/videos?api_key=</string>
+    <string name="no_data_fetched">Failed to fetch data!</string>
+    <string name="favorite_snack">Added as a Favorite Movie: </string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
