Update settings preference and clean up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,16 +33,18 @@
     <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
     <string name="no_trailers_avail">No Trailers Available</string>
     <string name="mark_as_favorite">MARK AS FAVORITE</string>
-    <string name="api_key">f804facb811415aff9fb6ec12310e4a6</string>
     <string name="youtube_base_url">https://www.youtube.com/watch?v=</string>
     <string name="trailer_start">http://api.themoviedb.org/3/movie/</string>
     <string name="trailer_end">/videos?api_key=</string>
-    <string name="no_data_fetched">Failed to fetch data!</string>
+    <string name="no_data_fetched">No Favorites have been saved!</string>
     <string name="favorite_snack">Added as a Favorite Movie: </string>
     <string name="duplicate_favorite">Already added as a favorite</string>
     <string name="favorite_added">Favorite Added</string>
+    <string name="no_internet_service">No Internet Service"</string>
+    <string name="link_start">&lt;a href=\'</string>
+    <string name="link_end">\'&gt; Full Review &lt;\/a&gt;</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
